Document PPDG/src/objects/Regression_Tests__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>System</label>
        <referenceTo>Regression_Warehouse__c</referenceTo>
        <relationshipLabel>Regression Test</relationshipLabel>
        <relationshipName>Regression_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Ref__c</fullName>
        <label>Test Ref</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>complexity__c</fullName>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Regression Test</label>
    <listViews>
        <fullName>All</fullName>
        <columns>System__c</columns>
        <columns>Test_Ref__c</columns>
        <columns>Function__c</columns>
        <columns>Path__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>complexity__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Test No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regression Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>